base/monitoring/aware/deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: aware
    tier: api
  name: aware-api
  namespace: monitoring
  annotations:
    flux.weave.works/automated: 'true'
    flux.weave.works/tag.aware-api: semver:~3.*
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aware
        tier: api
    spec:
      containers:
      - name: aware-api
        image: sdpequinor/aware:3.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
        resources:
          requests:
            cpu: 100m
            memory: "100Mi"
          limits:
            cpu: 500m
            memory: "1Gi"
