base/monitoring/aware/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aware
  namespace: monitoring
  labels:
    app: aware
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - aware.sdpaks.equinor.com
      secretName: aware-tls
  rules:
    - host: aware.sdpaks.equinor.com
      http:
        paths:
          - path: /api/exports
            backend:
              serviceName: aware-api
              servicePort: 80
